--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
+<AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
    <children>
       <Label layoutX="18.0" layoutY="91.0" text="ประเภทหนังสือ |" textFill="#a05e07">
          <font>
@@ -147,16 +149,74 @@
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0">
+      <HBox fx:id="head1" prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css">
          <children>
-            <GridPane fx:id="gridPaneInHead" prefHeight="69.0" prefWidth="1024.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
+            <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/logoverLightBrown.png" />
+               </image>
+            </ImageView>
+            <MenuButton fx:id="bookTypeMenuItem" mnemonicParsing="false" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
+               <font>
+                  <Font name="JasmineUPC" size="25.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="40.0" top="13.0" />
+               </HBox.margin>
+            </MenuButton>
+            <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
+               <font>
+                  <Font name="JasmineUPC" size="25.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="30.0" right="-20.0" top="13.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="status" mnemonicParsing="false" prefHeight="20.0" prefWidth="91.0" style="-fx-background-radius: 20;" text="Status" textFill="WHITE">
+               <font>
+                  <Font name="JasmineUPC" size="25.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <stylesheets>
+                  <URL value="@style/style.css" />
+                  <URL value="@style/PrimaryTheme.css" />
+               </stylesheets>
+               <styleClass>
+                  <String fx:value="font_rsu_12pt" />
+                  <String fx:value="backgroundColorLightBrownButton" />
+               </styleClass>
+               <HBox.margin>
+                  <Insets left="250.0" right="25.0" top="16.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="46.0" prefWidth="202.0" style="-fx-background-radius: 30;" stylesheets="@style/PrimaryTheme.css" textFill="WHITE">
+               <font>
+                  <Font name="JasmineUPC" size="25.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <graphic>
+                  <Label fx:id="usernameInHead" alignment="CENTER" prefHeight="31.0" prefWidth="167.0" styleClass="font_rsu_12pt" stylesheets="@style/style.css" text="Username" textFill="WHITE">
+                     <graphic>
+                        <ImageView fx:id="img" fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="radius">
+                           <viewport>
+                              <Rectangle2D />
+                           </viewport>
+                        </ImageView>
+                     </graphic>
+                  </Label>
+               </graphic>
+               <styleClass>
+                  <String fx:value="font_rsu_12pt" />
+                  <String fx:value="backgroundColorLightBrownButton" />
+               </styleClass>
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
       <ImageView fitHeight="36.0" fitWidth="33.0" layoutX="970.0" layoutY="88.0" onMouseClicked="#handleBackToMarket" pickOnBounds="true" preserveRatio="true">
