--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.HomeController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.HomeController">
     <children>
         <BorderPane layoutX="-1.0" layoutY="1.0" prefHeight="768.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -98,14 +98,14 @@
                         <RowConstraints maxHeight="333.66660156250003" minHeight="10.0" prefHeight="319.533349609375" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: 111;">
                             <children>
-                                <ImageView fitHeight="300.0" fitWidth="2000.0" pickOnBounds="true" preserveRatio="true">
+                                <ImageView fitHeight="306.0" fitWidth="1023.0" pickOnBounds="true" smooth="false">
                                     <image>
-                                        <Image url="@image/promotion4.jpg" />
+                                        <Image url="@image/promotion_head.png" />
                                     </image>
                                     <HBox.margin>
-                                        <Insets left="70.0" />
+                                        <Insets />
                                     </HBox.margin>
                                 </ImageView>
                             </children>
@@ -130,9 +130,9 @@
                               </Label>
                      </children>
                   </HBox>
-                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="310.0" GridPane.rowIndex="2">
+                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="310.0" style="-fx-background-color: fff;" GridPane.rowIndex="2">
                      <content>
-                        <FlowPane fx:id="bookListFlowPane" columnHalignment="CENTER" hgap="35.0" maxHeight="310.0" vgap="20.0" />
+                        <FlowPane fx:id="bookListFlowPane" columnHalignment="CENTER" hgap="35.0" maxHeight="310.0" style="-fx-background-color: fff;" vgap="35.0" />
                      </content>
                      <GridPane.margin>
                         <Insets />
