--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -98,9 +98,9 @@
                         <RowConstraints maxHeight="333.66660156250003" minHeight="10.0" prefHeight="319.533349609375" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: 111;">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #eef4ff;">
                             <children>
-                                <ImageView fitHeight="306.0" fitWidth="1023.0" pickOnBounds="true" smooth="false">
+                                <ImageView fitHeight="322.0" fitWidth="806.0" pickOnBounds="true" smooth="false">
                                     <image>
                                         <Image url="@image/promotion_head.png" />
                                     </image>
@@ -132,7 +132,7 @@
                   </HBox>
                   <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="310.0" style="-fx-background-color: fff;" GridPane.rowIndex="2">
                      <content>
-                        <FlowPane fx:id="bookListFlowPane" columnHalignment="CENTER" hgap="35.0" maxHeight="310.0" style="-fx-background-color: fff;" vgap="35.0" />
+                        <FlowPane fx:id="bookListFlowPane" alignment="TOP_CENTER" columnHalignment="CENTER" hgap="35.0" maxHeight="310.0" style="-fx-background-color: fff;" vgap="35.0" />
                      </content>
                      <GridPane.margin>
                         <Insets />
