--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -137,7 +137,7 @@
                                     <Font name="JasmineUPC" size="32.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="4">
+                              <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" onAction="#handleToLogoutButton" text="ออกจากระบบ" textFill="WHITE" GridPane.rowIndex="4">
                                  <font>
                                     <Font name="JasmineUPC" size="32.0" />
                                  </font>
